Working on profile. Please test picture updates.

--- a/templates/editHive.html
+++ b/templates/editHive.html
@@ -13,8 +13,8 @@
         }
 
         .back-button {
-            background-color: white;
-            border: 2px solid #4CAF50;
+            background-color: #EFE480;
+            border: 2px solid darkorange;
 
         }
 
@@ -107,7 +107,7 @@
             }
 
             /* Add some hover effects to buttons */
-            .form-container .btn:hover, .open-button:hover {
+            .form-container .btn:hover, .back-button:hover {
                 opacity: 1;
             }
     </style>
