--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,7 +22,7 @@
     <table border="0" style="border-collapse: collapse; width: 80%;">
     <tbody>
         <tr style="height: 35px;">
-            <td style="width: 50%; height: 35px;" colspan="3" id="titleText"><h1>{{ '{{userName}}'}} would go here</h1></td>
+            <td style="width: 50%; height: 35px;" colspan="3" id="titleText"><h1>{{ '{{userName}}'}}'s Hive</h1></td>
         </tr>
         <tr style="height: 300px;">
             <td style="width: 30%; height: 300px;" id="imagebox"><img id="imagio" src="#" alt="your hive" class="imagio" /></td>
@@ -30,14 +30,14 @@
             <td style="width: 50%; height: 300px;" rowspan="3" id="hiveinfobox"><label><input type="checkbox" id="hiveinfo" name="hiveinfo" value="hiveinfo">Hive info goes here</label></td>
         </tr>
         <tr style="height: 31px;">
-            <td style="width: 30%; height: 31px;" id="yellow"><input id="pictureupload" type="file" onchange="readURL(this);" accept="image/gif, image/jpeg, image/png" value="Upload" /></td>
+            <td style="width: 30%; height: 31px;" id="yellow"><input id="pictureupload" type="file" ng-change="readURL(this)" accept="image/gif, image/jpeg, image/png" value="Upload" /></td>
         </tr>
         <tr style="height: 222px;">
             <td style="width: 30%; height: 222px;">Phone: <input name="yourphone" type="tel" /><br /></br>Email: <input name="yourmail" type="email" /></td>
         </tr>
         <tr style="height: 31px;">
-            <td style="width: 30%; height: 31px;" id-"yellow"><input id="contactupdate" type="submit" value="Update" /></td>
-            <td style="width: 60%; height: 31px;" id="yellow"><input id="infoupdate" type="submit" value="Update" /></td>
+            <td style="width: 30%; height: 31px;" id-"yellow"><input id="contactupdate" ng-click="contactUpdate()" type="submit" value="Update" /></td>
+            <td style="width: 60%; height: 31px;" id="yellow"><input id="infoupdate" ng-click="hiveInfoUpdate()" type="submit" value="Update" /></td>
         </tr>
     </tbody>
     </table>
