profile page js changes

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,7 @@
 <html lang="en" ng-app="profile" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <!-- <link rel="stylesheet" href="../static/css/ProfileStyle.css"> -->
+    <link rel="stylesheet" href="../static/css/ProfileStyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='controllers/profile.controller.js') }}"></script>
     <script>
