change css stype for login/register

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,15 +12,15 @@
     <script type="text/javascript" src="{{ url_for('static', filename='controllers/login.controller.js') }}"></script>
 </head>
 
-<body ng-controller="loginController">
+<body ng-controller="loginController" style="background-color:#EFE4B0;">
     <div class="container" style="height: 454px;">
         <div class="col" style="width: 446px;height: 443px;margin-top: 50px;margin-bottom: 0px;margin-right: 0px;margin-left: 245px;">
             <h1 style="padding-left: 0;padding-top: 39px;padding-bottom: 7px;">Badger Hive Management System</h1>
-            <p style="color: rgb(163,170,177);">Presented by Centralized-Samrt-Dashboard Team</p>
+            <p style="color: saddlebrown;">Presented by Centralized-Samrt-Dashboard Team</p>
             <form>
                 <div class="form-group" style="height: 198px;">
-                    <p style="width: 93px;">username:</p><input class="form-control" type="text" id="usr_name">
-                    <p style="width: 93px;margin-top: 15px;">password:</p><input class="form-control" type="password" id="usr_pwd">
+                    <p style="width: 93px;">Username:</p><input class="form-control" type="text" id="usr_name">
+                    <p style="width: 93px;margin-top: 15px;">Password:</p><input class="form-control" type="password" id="usr_pwd">
                     <p style="width: 400px;margin-top: 15px; color:red" id="login_error">&nbsp;</p>
                 </div>
                     
