--- a/templates/register_succ.html
+++ b/templates/register_succ.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="{{ url_for('static', filename='controllers/register-success.controller.js') }}"></script>
 </head>
 
-<body ng-controller='registerController'>
+<body ng-controller='registerController' style="background-color:#EFE4B0;">
     <div class="container">
         <div class="col" style="width: 659px;margin-left: 307px;margin-top: 20px;padding: 0;padding-top: 56px;">
             <h1 style="margin-top: 38px;margin-left: 0;">Register Successfully!</h1><button class="btn btn-primary" ng-click="login()" id="back2Login" type="button" style="margin-left: 113px;margin-top: 37px;">Back to Login Page</button></div>
