--- a/templates/hives.html
+++ b/templates/hives.html
@@ -79,8 +79,8 @@
     <div class="hive-container">
         <div class="hive" ng-repeat="hive in hives | orderBy : 'id'">
             <h2>Hive #{{ '{{hive.hiveID}}' }}</h2>
-            <input type="button" style="font-size:medium" ng-click="editHive(hive.id)" value="Edit" />&nbsp; &nbsp; &nbsp;
-            <input type="button" style="font-size:medium" ng-click="deleteHive(hive.id)" value="Delete" />
+            <input type="button" style="font-size:medium" ng-click="editHive(hive.hiveID)" value="Edit" />&nbsp; &nbsp; &nbsp;
+            <input type="button" style="font-size:medium" ng-click="deleteHive(hive.hiveID)" value="Delete" />
         </div>
         <!--Add Hive function at the end-->
         <div class="addhive">
