--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -1,3 +1,16 @@
-﻿body
-{
+﻿body {
+    background-color:blue;
+
+}
+
+h1 {
+    text-align: center;
+    font: bold arial;
+}
+
+.homepage-button-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    padding: 10px;
+    justify-content: space-evenly;
 }
