--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,9 +3,32 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Centralized Dashboard - Homepage</title>
+    <link rel="stylesheet"
+          href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/UIStyleSheet.css') }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='controllers/homepage.controller.js') }}"></script>
+ 
 </head>
 <body>
-
+    <!--Homepage Title-->
+    <h1>WELCOME</h1><br>
+    <h1>Choose Rover Task</h1><br>
+    <br>
+    <!--Grid of Buttons-->
+    <div class="homepage-button-container">
+        <div>
+            <input type="button" style="font-size:large" ng-click="science()" value="Science" />
+            <input type="button" style="font-size:large" ng-click="aiNav()" value="AI Navigation" />
+            <input type="button" style="font-size:large" ng-click="erdm()" value="ERDM" />
+            <input type="button" style="font-size:large" ng-click="equipServicing()" value="Equipment Servicing" />
+            <input type="button" style="font-size:large" ng-click="maintenance()" value="Maintenance" />
+        </div>
+    </div>
 </body>
 </html>
