--- a/templates/invalid-page.html
+++ b/templates/invalid-page.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html ng-app="invalidPage">
 <head>
-  <title>Hive Management - Invalid Page</title>
+  <title>Centralized Dashboard - Invalid Page</title>
   <link rel = "stylesheet"
   href = "https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
-  <link rel = "stylesheet" href="{{ url_for('static', filename='css/invalid-page.css') }}">
+  <link rel = "stylesheet" href="{{ url_for('static', filename='css/UIStyleSheet.css') }}">
   <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
   <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
@@ -17,7 +17,7 @@
     <br>  
     <img src="{{ url_for('static', filename='imgs/invalid-access.svg') }}" width="300" height="300"><br>
     <h1>You do not have permission to access this page or the requested page does not exist</h1><br>
-    <button ng-click="login()">LOGIN</button>
+    <button ng-click="homepage()">HOMEPAGE</button>
   </center>
 </body>
 </html>
