"Coming Soon" and "Invalid" pages are complete but need to be tested. Homepage needs visual testing to continue. Having problems linking the stylesheet with angular.

--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -13,3 +13,8 @@ h1 {
     padding: 10px;
     justify-content: space-evenly;
 }
+
+.topnav {
+    overflow: hidden;
+    background-color: whitesmoke;
+}
