--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -20,14 +20,15 @@
     <h1>WELCOME</h1><br>
     <h1>Choose Rover Task</h1><br>
     <br>
-    <!--Grid of Buttons-->
+    <!--Grid of Buttons... uses old looking buttons.
+        TODO: Change click areas (buttons) to look like mock up-->
     <div class="homepage-button-container">
         <div>
-            <input type="button" style="font-size:large" ng-click="science()" value="Science" />
+            <input type="button" style="font-size:large" ng-click="Science()" value="Science" />
             <input type="button" style="font-size:large" ng-click="aiNav()" value="AI Navigation" />
-            <input type="button" style="font-size:large" ng-click="erdm()" value="ERDM" />
-            <input type="button" style="font-size:large" ng-click="equipServicing()" value="Equipment Servicing" />
-            <input type="button" style="font-size:large" ng-click="maintenance()" value="Maintenance" />
+            <input type="button" style="font-size:large" ng-click="ERDM()" value="ERDM" />
+            <input type="button" style="font-size:large" ng-click="EquipmentServicing()" value="Equipment Servicing" />
+            <input type="button" style="font-size:large" ng-click="Maintenance()" value="Maintenance" />
         </div>
     </div>
 </body>
