--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -1,6 +1,5 @@
 ﻿body {
-    background-color:blue;
-
+    background-color:whitesmoke;
 }
 
 h1 {
@@ -13,4 +12,41 @@ h1 {
     grid-template-columns: auto auto;
     padding: 10px;
     justify-content: space-evenly;
+}
+
+.topnav {
+    overflow:hidden;
+    background-color:whitesmoke;
+}
+
+.topnav homepage {
+    float:right;
+    text-align:center;
+    font: italic times new roman;
+}
+
+.topnav homepage:hover {
+    background-color:black;
+    color:whitesmoke;
+}
+
+.topnav pageName {
+    align-content:center;
+    font: bold verdana;
+}
+
+#emergency-stop {
+    color: red;
+    text-align: center;
+
+}
+
+#reset-button {
+    color: orange;
+    text-align: center;
+}
+
+#go-button {
+    color: green;
+    text-align: center;
 }
