--- a/templates/Maintenance.html
+++ b/templates/Maintenance.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html ng-app="Maintenance">
 <head>
     <meta charset="utf-8" />
     <title>Centralized Dashboard - Maintenance</title>
@@ -14,7 +14,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='controllers/Maintenance.controller.js') }}"></script>
 </head>
-<body>
-
+<body ng-controller="MaintenanceController">
+    <div class="topnav">
+        <homepage href="#home">Homepage</homepage>
+        <pageName href="#pageName">Maintenance</pageName>
+    </div>
 </body>
 </html>
