--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -11,7 +11,8 @@ h1 {
     display: grid;
     grid-template-columns: auto auto;
     padding: 10px;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
 }
 
 .topnav {
