Revert "Centered the buttons on the homepage"
This reverts commit 261f828633913c49f5f99658f42fdc2eb020e989.

--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -11,8 +11,7 @@ h1 {
     display: grid;
     grid-template-columns: auto auto;
     padding: 10px;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
 }
 
 .topnav {
