Centered the homepage buttons in one column.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -23,11 +23,23 @@
     <!--Grid of Buttons... uses old looking buttons.
         TODO: Change click areas (buttons) to look like mock up-->
     <div class="homepage-button-container">
-        <div>
+        <div class="homepage-button">
             <input type="button" style="font-size:large" ng-click="Science()" value="Science" />
+        </div>
+
+        <div class="homepage-button">
             <input type="button" style="font-size:large" ng-click="aiNav()" value="AI Navigation" />
+        </div>
+
+        <div class="homepage-button">
             <input type="button" style="font-size:large" ng-click="ERDM()" value="ERDM" />
+        </div>
+
+        <div class="homepage-button">
             <input type="button" style="font-size:large" ng-click="EquipmentServicing()" value="Equipment Servicing" />
+         </div>
+
+        <div class="homepage-button">
             <input type="button" style="font-size:large" ng-click="Maintenance()" value="Maintenance" />
         </div>
     </div>
