--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-color:whitesmoke;
+    background-color:silver;
 }
 
 h1 {
@@ -9,14 +9,24 @@ h1 {
 
 .homepage-button-container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
     padding: 10px;
     justify-content: space-evenly;
 }
 
+.homepage-button {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
 .topnav {
     overflow:hidden;
-    background-color:whitesmoke;
+    background-color:silver;
 }
 
 .topnav homepage {
