--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -16,13 +16,21 @@ h1 {
 }
 
 .homepage-button {
-    border: none;
+    border-radius: 5px;
     color: white;
-    padding: 15px 32px;
+    padding: 15px 40px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+.hp-button {
+    background-color: black;
+    color: white;
+}
+
+.hp-button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .topnav {
