--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -24,23 +24,23 @@
         TODO: Change click areas (buttons) to look like mock up-->
     <div class="homepage-button-container">
         <div class="homepage-button">
-            <input type="button" style="font-size:large" ng-click="Science()" value="Science" />
+            <input class="hp-button" type="button" style="font-size:large" ng-click="Science()" value="Science" />
         </div>
 
         <div class="homepage-button">
-            <input type="button" style="font-size:large" ng-click="aiNav()" value="AI Navigation" />
+            <input class="hp-button" type="button" style="font-size:large" ng-click="aiNav()" value="AI Navigation" />
         </div>
 
         <div class="homepage-button">
-            <input type="button" style="font-size:large" ng-click="ERDM()" value="ERDM" />
+            <input class="hp-button" type="button" style="font-size:large" ng-click="ERDM()" value="ERDM" />
         </div>
 
         <div class="homepage-button">
-            <input type="button" style="font-size:large" ng-click="EquipmentServicing()" value="Equipment Servicing" />
+            <input class="hp-button" type="button" style="font-size:large" ng-click="EquipmentServicing()" value="Equipment Servicing" />
          </div>
 
         <div class="homepage-button">
-            <input type="button" style="font-size:large" ng-click="Maintenance()" value="Maintenance" />
+            <input class="hp-button" type="button" style="font-size:large" ng-click="Maintenance()" value="Maintenance" />
         </div>
     </div>
 </body>
