Changed the look of the homepage UI.  Feedback appreciated.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -18,29 +18,29 @@
 <body ng-controller="homepageController">
     <!--Homepage Title-->
     <h1>WELCOME</h1><br>
-    <h1>Choose Rover Task</h1><br>
+    <h1>CHOOSE ROVER TASK</h1><br>
     <br>
     <!--Grid of Buttons... uses old looking buttons.
         TODO: Change click areas (buttons) to look like mock up-->
     <div class="homepage-button-container">
         <div class="homepage-button">
-            <input class="hp-button" type="button" style="font-size:large" ng-click="Science()" value="Science" />
+            <input class="hp-button" type="button" ng-click="Science()" value="Science" />
         </div>
 
         <div class="homepage-button">
-            <input class="hp-button" type="button" style="font-size:large" ng-click="aiNav()" value="AI Navigation" />
+            <input class="hp-button" type="button" ng-click="aiNav()" value="AI Navigation" />
         </div>
 
         <div class="homepage-button">
-            <input class="hp-button" type="button" style="font-size:large" ng-click="ERDM()" value="ERDM" />
+            <input class="hp-button" type="button" ng-click="ERDM()" value="ERDM" />
         </div>
 
         <div class="homepage-button">
-            <input class="hp-button" type="button" style="font-size:large" ng-click="EquipmentServicing()" value="Equipment Servicing" />
+            <input class="hp-button" type="button" ng-click="EquipmentServicing()" value="Equipment Servicing" />
          </div>
 
         <div class="homepage-button">
-            <input class="hp-button" type="button" style="font-size:large" ng-click="Maintenance()" value="Maintenance" />
+            <input class="hp-button" type="button" ng-click="Maintenance()" value="Maintenance" />
         </div>
     </div>
 </body>
