--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -1,10 +1,12 @@
 ﻿body {
     background-color:silver;
+
 }
 
 h1 {
     text-align: center;
     font: bold arial;
+    font-size: 50px;
 }
 
 .homepage-button-container {
@@ -27,6 +29,13 @@ h1 {
 .hp-button {
     background-color: black;
     color: white;
+    padding: 12px 40px;
+    border-radius: 30px;
+    min-width: 400px;
+    max-width: 400px;
+    min-height: 80px;
+    max-height: 80px;
+    font-size: 25px;
 }
 
 .hp-button:hover {
