Invalid Page is now the error_handler and returns to the homepage on button press. The Homepage button on the Coming Soon page still doesn't return to homepage.

--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -26,24 +26,26 @@ h1 {
 }
 
 .topnav {
-    overflow:hidden;
-    background-color:silver;
+    overflow: hidden;
+    background-color: silver;
+    align-content: center;
+}
+
+
+.topnav pageName {
+    font: bold 20pt verdana;
 }
 
 .topnav homepage {
     float:right;
     text-align:center;
-    font: italic times new roman;
+    justify-content:right;
+    font: italic 20pt times new roman;
 }
 
 .topnav homepage:hover {
     background-color:black;
     color:whitesmoke;
-}
-
-.topnav pageName {
-    align-content:center;
-    font: bold verdana;
 }
 
 #emergency-stop {
