--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -17,8 +17,9 @@
 </head>
 <body ng-controller="AINavigationController">
     <div class="topnav">
-        <homepage href="#home">Homepage</homepage>
         <pageName href="#pageName">AI Navigation</pageName>
+        <homepage ng-click="homepage()" href="#home">Homepage</homepage>
     </div>
+
 </body>
 </html>
