--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -45,7 +45,8 @@ h1 {
 .topnav {
     overflow: hidden;
     background-color: silver;
-    align-content: center;
+    text-align: center;
+    padding-bottom: 40px;
 }
 
 
@@ -63,6 +64,40 @@ h1 {
 .topnav homepage:hover {
     background-color:black;
     color:whitesmoke;
+}
+
+.ainav {
+    display: grid;
+    grid-template-columns: 50% 25% 25%;
+    grid-template-rows: 450px 100px auto auto;
+
+}
+
+.ainav map{
+    grid-row: 1 / 3;
+    border: 5px solid black;
+    text-align:center;
+}
+
+/*target coordinates? or just section for current coordinates and then table of targets below?*/
+.ainav coord-display{
+    grid-row: 1;
+    grid-column: 2 / span 2; 
+    border: 5px solid black;
+    padding: 5px;
+}
+
+.ainav enter-coord{
+    grid-row: 2;
+    grid-column: 2 / span 2; 
+    border: 5px solid black;
+    padding: 5px;
+}
+
+.ainav notification-bar {
+    grid-row: 4;
+    grid-column: 1 / 3;
+    border: 5px solid black;
 }
 
 #emergency-stop {
