Added in a form for the Camera IP

--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -38,7 +38,12 @@
             </table>
         </coord-display>
         <enter-coord>enter new waypoint</enter-coord>
-        <div>Add Camera IP: *Form and button here*</div><div></div>
+        
+        <form>
+            <input type="text" id="cameraIP" name="camera" placeholder="Add Camera IP Address:"><br>
+            <input type="submit" value="Submit">
+            </form><div></div>
+        
         <div id="go-button">GO</div>
         <notification-bar><b>Command logs here</b></notification-bar>
         <div id="emergency-stop">STOP</div>
