--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -37,10 +37,15 @@
                 
             </table>
         </coord-display>
-        <enter-coord>enter new waypoint</enter-coord>
+        <enter-coord>Enter new waypoint</enter-coord>
+        <form>
+            <input type="text" id="waypointNewLongitude" name="waypointNew" placeholder="Longitude:"><br>
+            <input type="text" id="waypointNewLatitude" name="waypointNew" placeholder="Latitude:"><br>
+            <input type="submit" value="Submit"><br>
+        </form>
         
         <form>
-            <input type="text" id="cameraIP" name="camera" placeholder="Add Camera IP Address:"><br>
+            <input type="text" id="cameraIP" name="cameraIP" placeholder="Add Camera IP Address:">
             <input type="submit" value="Submit">
             </form><div></div>
         
