Added in the forms to the AI Navigation and checking the look without the border grids

--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -37,16 +37,15 @@
                 
             </table>
         </coord-display>
-        <enter-coord>Enter new waypoint</enter-coord>
-        <form>
-            <input type="text" id="waypointNewLongitude" name="waypointNew" placeholder="Longitude:"><br>
-            <input type="text" id="waypointNewLatitude" name="waypointNew" placeholder="Latitude:"><br>
-            <input type="submit" value="Submit"><br>
-        </form>
+        <enter-coord><form>
+            <input type="text" id="waypointNewLongitude" name="waypointNew" placeholder="Enter New Longitude:"><br>
+            <input type="text" id="waypointNewLatitude" name="waypointNew" placeholder="Enter New Latitude:"><br>
+            <input type="submit" value="Submit" id="submit-button"><br>
+        </form></enter-coord>
         
         <form>
             <input type="text" id="cameraIP" name="cameraIP" placeholder="Add Camera IP Address:">
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" id="submit-button">
             </form><div></div>
         
         <div id="go-button">GO</div>
