--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -66,6 +66,11 @@ h1 {
     color:whitesmoke;
 }
 
+.submit-button{
+    background-color:papayawhip;
+    border-color:dimgrey;
+}
+
 .ainav {
     display: grid;
     grid-template-columns: 50% 25% 25%;
@@ -75,7 +80,7 @@ h1 {
 
 .ainav map{
     grid-row: 1 / 3;
-    border: 5px solid black;
+    /*border: 5px solid black;*/
     text-align:center;
 }
 
@@ -83,21 +88,21 @@ h1 {
 .ainav coord-display{
     grid-row: 1;
     grid-column: 2 / span 2; 
-    border: 5px solid black;
+    /*border: 5px solid black;*/
     padding: 5px;
 }
 
 .ainav enter-coord{
     grid-row: 2;
     grid-column: 2 / span 2; 
-    border: 5px solid black;
+    /*border: 5px solid black;*/
     padding: 5px;
 }
 
 .ainav notification-bar {
     grid-row: 4;
     grid-column: 1 / 3;
-    border: 5px solid black;
+    /*border: 5px solid black;*/
 }
 
 #emergency-stop {
