--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -80,7 +80,7 @@ h1 {
 
 .ainav map{
     grid-row: 1 / 3;
-    /*border: 5px solid black;*/
+    border: 2px solid black;
     text-align:center;
 }
 
@@ -88,7 +88,7 @@ h1 {
 .ainav coord-display{
     grid-row: 1;
     grid-column: 2 / span 2; 
-    /*border: 5px solid black;*/
+    border: 2px solid black;
     padding: 5px;
 }
 
@@ -100,9 +100,10 @@ h1 {
 }
 
 .ainav notification-bar {
+    background-color: whitesmoke;
     grid-row: 4;
     grid-column: 1 / 3;
-    /*border: 5px solid black;*/
+    border: 2px solid black;
 }
 
 #emergency-stop {
