--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -108,6 +108,42 @@ h1 {
     border: 2px solid black;
 }
 
+.erdm {
+    display: grid;
+    padding: 5px 5px;
+    row-gap: 10px;
+    grid-template-columns: 50% 25% 25%;
+    grid-template-rows: 450px 100px 50px 150px;
+}
+
+.erdm map{
+    grid-row: 1 / 3;
+    border: 2px solid black;
+    text-align:center;
+}
+
+/*target coordinates? or just section for current coordinates and then table of targets below?*/
+.erdm coord-display{
+    grid-row: 1;
+    grid-column: 2 / span 2; 
+    border: 2px solid black;
+    padding: 5px;
+}
+
+.erdm enter-coord{
+    grid-row: 2;
+    grid-column: 2 / span 2; 
+    /*border: 5px solid black;*/
+    padding: 5px;
+}
+
+.erdm notification-bar {
+    background-color: whitesmoke;
+    grid-row: 4;
+    grid-column: 1 / 3;
+    border: 2px solid black;
+}
+
 #emergency-stop {
     border-radius: 25px;
     background-color: red;
