--- a/templates/ERDM.html
+++ b/templates/ERDM.html
@@ -43,9 +43,9 @@
         </form></enter-coord>
         
         <form ng-submit="cameraIP()">
-            <input type="text" id="cameraIP" name="cameraIP" placeholder="Add Camera IP Address:">
-            <input type="submit" value="Submit" id="submit-button">
-            </form><div></div>
+            <!--<input type="text" id="cameraIP" name="cameraIP" placeholder="Add Camera IP Address:">
+    <input type="submit" value="Submit" id="submit-button">-->
+        </form><div></div>
         
         <div></div>
         <notification-bar><b>Command logs here</b></notification-bar>
