--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -34,12 +34,16 @@
                     <th>Target coordinates</th>
                     <th>Distance</th>
                 </tr>
+
+                <tr ng-repeat="waypoint in waypoints">
+                    <td>{{ '{{waypoint.lat}}' }} &nbsp;&nbsp; {{ '{{waypoint.long}}' }} &nbsp;&nbsp;</td>
+                </tr>
                 
             </table>
         </coord-display>
         <enter-coord><form>
-            <input type="text" id="waypointNewLongitude" name="waypointNew" placeholder="Enter New Longitude:"><br>
-            <input type="text" id="waypointNewLatitude" name="waypointNew" placeholder="Enter New Latitude:"><br>
+            <input type="number" id="waypointNewLongitude" name="waypointNew" placeholder="Enter New Longitude:"><br>
+            <input type="number" id="waypointNewLatitude" name="waypointNew" placeholder="Enter New Latitude:"><br>
             <input type="submit" ng-click="waypointNew()" value="Submit" id="submit-button"><br>
         </form></enter-coord>
         
